smp/error.log
    Checking smp-crypto v0.1.0 (D:\New_Generation_Email_System\smp\crates\crypto)
error[E0369]: binary operation `==` cannot be applied to type `Result<usize, &error::CryptoError>`
  --> crates\crypto\src\hkdf.rs:83:9
   |
83 |         assert_eq!(result.as_ref().map(|v| v.len()), Ok(42));
   |         ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
   |         |
   |         Result<usize, &error::CryptoError>
   |         Result<usize, &error::CryptoError>
   |
note: an implementation of `PartialEq` might be missing for `error::CryptoError`
  --> crates\crypto\src\error.rs:10:1
   |
10 | pub enum CryptoError {
   | ^^^^^^^^^^^^^^^^^^^^ must implement `PartialEq`
   = note: this error originates in the macro `assert_eq` (in Nightly builds, run with -Z macro-backtrace for more info)
help: consider annotating `error::CryptoError` with `#[derive(PartialEq)]`
  --> crates\crypto\src\error.rs:10:1
   |
10 + #[derive(PartialEq)]
11 | pub enum CryptoError {
   |

warning: variable does not need to be mutable
   --> crates\crypto\src\aead.rs:184:9
    |
184 |     let mut plaintext = cipher
    |         ----^^^^^^^^^
    |         |
    |         help: remove this `mut`
    |
    = note: `#[warn(unused_mut)]` (part of `#[warn(unused)]`) on by default

For more information about this error, try `rustc --explain E0369`.
warning: `smp-crypto` (lib test) generated 1 warning
error: could not compile `smp-crypto` (lib test) due to 1 previous error; 1 warning emitted
